    essentially just calls file.copy() but facilitates finding supplement
    files that are available along with the .Rnw/.Rmd exercise files.

  o In exams2nops() the argument 'blank' can now be a vector of length 2
    with the number of blank pages before and after the extra "pages".
    
  o Bug fix in extract_extra() which prevented that "exextra" metainformation
    was readed correctly in the previous version.


Changes in Version 2.1-0

  o Exercises can now either be in .Rnw format (R/LaTeX, as in previous versions)
    or in .Rmd format (R/Markdown). A new function xweave() is provided for
    weaving either format by either calling utils::Sweave() for .Rnw and
    knitr::knit() for .Rmd. If .Rmd exercises are used, the weaved exercises
    require conversion by pandoc (see below).

  o The vignettes have not yet been updated to incorporate the R/Markdown
    information or the new interfaces described below. For examples and some
    introductory comments, exams_skeleton() can generate demo scripts.

  o Added new make_exercise_transform_pandoc() transfomer generator, interfacing
    rmarkdown::pandoc_convert(). This provides an additional option for generating
    HTML output and additionally enables Markdown output (e.g., for ARSnova, see
    below).

  o Added new interface exams2nops() for generating PDF exams that can be
    printed, scanned, and automatically evaluated. Accompanying functions
    nops_scan() (using the png package) and nops_eval() are provided as well.
    The "nops" exams can be internationalized. So far there is language support
    for English (en), Dutch (nl, contributed by Niels Smits), French (fr,
    contributed by Arthur Allignol), German (de), Italian (it, contributed by
    Domenico Zambella), Portuguese (pt, contributed by Fabian Petutschnig),
    Romanian (ro, contributed by Cristian Gatu), Spanish (es, contributed by
    Maria Kogelnik).

  o Added new interface exams2arsnova() for exporting exams/quizzes to the